// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgMeldinger with 1 message 1`] = `
<a
  className="message clickable"
  data-ga="Dittnav/Varsel/Arbeidsgiver"
  href="https://mytesturl.nav.no/sbl/nav_security_check?goto=/sbl/as/minside/meldinger/meldingerNAV.do"
>
  <span
    aria-label="snakkeboble-ikon"
    className="icon ag-icon"
  />
  <div
    className="texts"
  >
    <p>
      Du har fått en ny melding fra arbeidsgiver
    </p>
    <p>
      Se melding
    </p>
  </div>
</a>
`;

exports[`AgMeldinger with 6 messages 1`] = `
<a
  className="message clickable"
  data-ga="Dittnav/Varsel/Arbeidsgiver"
  href="https://mytesturl.nav.no/sbl/nav_security_check?goto=/sbl/as/minside/meldinger/meldingerNAV.do"
>
  <span
    aria-label="snakkeboble-ikon"
    className="icon ag-icon"
  />
  <div
    className="texts"
  >
    <p>
      Du har fått 5 nye meldinger fra arbeidsgiver
    </p>
    <p>
      Oversikt over meldinger
    </p>
  </div>
</a>
`;

exports[`AgMeldinger without messages 1`] = `null`;
